--- a/index.html
+++ b/index.html
@@ -49,45 +49,44 @@
         </div>
 
         <!-- Upload Section -->
-            <div class="upload-section d-flex justify-content-between align-items-center mb-5">
-                <div class="upload-item">
-                    <h5 class="text-center mb-2">Upload Job Description</h5>
-                    <div class="upload-box" id="jdUpload">
-                        <div class="upload-content text-center">
-                            <i class="bi bi-cloud-upload"></i>
-                            <p>Drag & drop JD file or click to upload</p>
-                            <input type="file" class="file-input" accept=".pdf,.doc,.docx,.txt" hidden>
-                        </div>
-                    </div>
-                </div>
-                <div class="upload-item" id="step2" style="display: none;">
-                    <h5 class="text-center mb-2">Upload Resumes</h5>
-                    <div class="upload-box" id="resumeUpload">
-                        <div class="upload-content text-center">
-                            <i class="bi bi-cloud-upload"></i>
-                            <p>Drag & drop resume files or click to upload</p>
-                            <input type="file" class="file-input" accept=".pdf,.doc,.docx,.txt" multiple hidden>
-                        </div>
+        <div class="upload-section d-flex justify-content-between align-items-center mb-5">
+            <div class="upload-item">
+                <h5 class="text-center mb-2">Upload Job Description</h5>
+                <div class="upload-box" id="jdUpload">
+                    <div class="upload-content text-center">
+                        <i class="bi bi-cloud-upload"></i>
+                        <p>Drag & drop JD file or click to upload</p>
+                        <input type="file" class="file-input" accept=".pdf,.doc,.docx,.txt" hidden>
                     </div>
                 </div>
             </div>
-
+            <div class="upload-item" id="step2" style="display: none;">
+                <h5 class="text-center mb-2">Upload Resumes</h5>
+                <div class="upload-box" id="resumeUpload">
+                    <div class="upload-content text-center">
+                        <i class="bi bi-cloud-upload"></i>
+                        <p>Drag & drop resume files or click to upload</p>
+                        <input type="file" class="file-input" accept=".pdf,.doc,.docx,.txt" multiple hidden>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- Filters -->
         <div class="filters mb-4" id="filters" style="display: none;">
             <div class="row">
                 <div class="col-md-4">
-                    <select class="form-select" id="universityFilter">
+                    <select class="form-select" id="universityFilter" multiple>
                         <option value="">Select University</option>
                     </select>
                 </div>
                 <div class="col-md-4">
-                    <select class="form-select" id="skillsFilter">
+                    <select class="form-select" id="skillsFilter" multiple>
                         <option value="">Select Skills</option>
                     </select>
                 </div>
                 <div class="col-md-4">
-                    <select class="form-select" id="experienceFilter">
+                    <select class="form-select" id="experienceFilter" multiple>
                         <option value="">Select Experience</option>
                         <option value="0-2">0-2 years</option>
                         <option value="3-5">3-5 years</option>
@@ -108,6 +107,7 @@
                         <th>Skills</th>
                         <th>Experience</th>
                         <th>Match %</th>
+                        <th>Action</th> <!-- New column for Email button -->
                     </tr>
                 </thead>
                 <tbody id="resultsTable">
@@ -115,34 +115,32 @@
             </table>
         </div>
 
-
-<!-- Charts Section -->
-<div class="row mt-5" id="chartsSection" style="display: none;">
-    <!-- Wrapper for both charts -->
-    <div class="charts-container d-flex justify-content-between">
-        <!-- First Chart (Universities Distribution) -->
-        <div class="chart-item">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title text-center">Universities Distribution</h5>
-                    <canvas id="universityChart"></canvas>
+        <!-- Charts Section -->
+        <div class="row mt-5" id="chartsSection" style="display: none;">
+            <!-- Wrapper for both charts -->
+            <div class="charts-container d-flex justify-content-between">
+                <!-- First Chart (Universities Distribution) -->
+                <div class="chart-item">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">Universities Distribution</h5>
+                            <canvas id="universityChart"></canvas>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
 
-        <!-- Second Chart (Skills Distribution) -->
-        <div class="chart-item">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title text-center">Skills Distribution</h5>
-                    <canvas id="skillsChart"></canvas>
+                <!-- Second Chart (Skills Distribution) -->
+                <div class="chart-item">
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">Skills Distribution</h5>
+                            <canvas id="skillsChart"></canvas>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
