--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
         <div class="filters mb-4" id="filters" style="display: none;">
             <div class="row">
                 <div class="col-md-4">
-                    <select class="form-select" id="universityFilter" multiple>
+                    <select class="form-select" id="universityFilter" >
                         <option value="">Select University</option>
                     </select>
                 </div>
                 <div class="col-md-4">
-                    <select class="form-select" id="skillsFilter" multiple>
+                    <select class="form-select" id="skillsFilter" >
                         <option value="">Select Skills</option>
                     </select>
                 </div>
                 <div class="col-md-4">
-                    <select class="form-select" id="experienceFilter" multiple>
+                    <select class="form-select" id="experienceFilter" >
                         <option value="">Select Experience</option>
                         <option value="0-2">0-2 years</option>
                         <option value="3-5">3-5 years</option>
